...
    [mode, baseTz],
  );

  return (
    <>
      <SectionList
        testID="trip-list"
        sections={sections}
        keyExtractor={keyExtractor}
        ListHeaderComponent={listHeader}
        renderItem={renderItem}
        renderSectionHeader={renderSectionHeader as any}
        contentContainerStyle={styles.listContent}
...
